Fix icon spacing in dropdown menu.

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -72,6 +72,10 @@
   height: 1.8rem !important;
 }
 
+.dialog-item .icon.outbound {
+  margin-left: 0.25em;
+}
+
 :root {
   --c-brand: #5e58e8;
   --c-brand-light: #7e77f4;
